# haskell

./: .gitignore  LICENSE  README.md  csv-analyzer.cabal  example.csv
src/: CSVAnalyzer.hs  Main.hs
