cabal-version: 2.4
name: csv-analyzer
version: 0.1.0.0
synopsis: A simple command-line CSV file analyzer
description: A lightweight tool for analyzing CSV files with basic statistics and filtering capabilities
homepage: https://github.com/yourusername/csv-analyzer
license: MIT
license-file: LICENSE
author: Your Name
maintainer: your.email@example.com
category: Data
build-type: Simple

executable csv-analyzer
  main-is: Main.hs
  other-modules: CSVAnalyzer
  build-depends: base >= 4.14 && < 5,
                 text >= 1.2,
                 vector >= 0.12,
                 cassava >= 0.5,
                 bytestring >= 0.10,
                 optparse-applicative >= 0.16
  hs-source-dirs: src
  default-language: Haskell2010
  ghc-options: -Wall -O2

library
  exposed-modules: CSVAnalyzer
  build-depends: base >= 4.14 && < 5,
                 text >= 1.2,
                 vector >= 0.12,
                 cassava >= 0.5,
                 bytestring >= 0.10
  hs-source-dirs: src
  default-language: Haskell2010
  ghc-options: -Wall 